<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">Quiz</string>
    <string name="the_name_of_the_player_is">The name of the player is:</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="Chose">You selected:</string>
    <string name="choose_your_own_profile_picture_by_hitting_the_droid">Choose your own profile picture by hitting the Droid...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="menu_quiz">Quiz App</string>
    <string name="your_name">Your name</string>
    <string name="get_started">Get started</string>
    <string name="enjoy_the_quiz_app_where_you_can">Enjoy the Quiz App, where you can:</string>
    <string name="test_your_skills">Test your skills</string>
    <string name="read_questions">Read Questions</string>
    <string name="create_questions">Create Questions</string>
    <string name="quiz_time">Quiz Time</string>
    <string name="profile">Profile</string>
    <string name="list_of_questions">List of Questions</string>
    <string name="new_question">New question</string>
    <string name="edit_name">Edit name</string>
    <string name="answers">Answers</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="this_is_the_correct_answer">This is the correct answer</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>