<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:checked="true" />
        <item
            android:id="@+id/quiz_time"
            android:icon="@drawable/ic_quiz"
            android:title="@string/quiz_time"
            android:checked="true" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_avatar"
            android:title="@string/profile"
            android:checked="true" />
        <item
            android:id="@+id/list_of_questions"
            android:icon="@drawable/ic_list_of_question"
            android:title="@string/list_of_questions"
            android:checked="true" />
        <item
            android:id="@+id/new_question"
            android:icon="@drawable/ic_new_question"
            android:title="@string/new_question"
            android:checked="true" />
    </group>
</menu>