<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.HomeFragment">

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="match_parent"
        android:layout_height="301dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="44dp"
        android:src="@mipmap/ic_banner_welcome_foreground" />

    <TextView
        android:id="@+id/tv_enjoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_welcome"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="347dp"
        android:text="@string/enjoy_the_quiz_app_where_you_can" />

    <Button
        android:id="@+id/btn_test_your_skills"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="466dp"
        android:text="@string/test_your_skills" />

    <Button
        android:id="@+id/btn_read_questions"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_test_your_skills"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/read_questions" />

    <Button
        android:id="@+id/btn_create_questions"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_read_questions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/create_questions" />
</RelativeLayout>